src/index.css
@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@200;400;500;600;700&display=swap");

@tailwind base;
@tailwind components;
@tailwind utilities;

body {
  font-family: "Poppins", sans-serif;
  margin: 0;
  padding: 0;
}

::-webkit-scrollbar {
  width: 8px;
  height: 6px;
}
::-webkit-scrollbar * {
  background: transparent;
}
::-webkit-scrollbar-thumb {
  background: #f59e0b !important;
  border-radius: 5px;
}

@layer components {
  .button {
    @apply bg-[#635fc7] py-2 px-4 rounded-full text-white text-lg font-semibold hover:opacity-80 duration-200;
  }
}

.select-status {
  background-image: url("./assets/icon-chevron-down.svg");
  appearance: none;
  background-repeat: no-repeat;
  background-position: right 16px top 50%;
}

